# desk.propsaas

./: .env.example  .gitignore  PROJECT.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260522_0001_initial_schema.py  20260528_0002_auth_foundation.py  20260529_0003_user_role.py  20260529_0004_telegram_link_tokens.py
docs/: frontend_scope.md  frontend_v1_tickets.md  live_test.md  project_status.md  runtime.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
premarket_operator/: __init__.py
premarket_operator/admin/: __init__.py  api.py  read_models.py
premarket_operator/app/: dependencies.py  main.py
premarket_operator/auth/: __init__.py  api.py  dependencies.py  security.py  service.py
premarket_operator/chat/: __init__.py  context_assembler.py  engine.py  guardrails.py  prompts.py  service.py
premarket_operator/core/: __init__.py  config.py  errors.py  logging.py  time.py
premarket_operator/dashboard/: __init__.py  api.py  read_models.py
premarket_operator/db/: models.py  repositories.py  session.py
premarket_operator/jobs/: __init__.py  (+2 more)
tests/: test_admin_live_day_endpoint.py  test_auth_foundation.py  test_authenticated_read_endpoints.py  test_dashboard_read_endpoint.py  test_gex_shock.py  test_inbound_routing.py  test_report_aware_chat.py  test_report_context.py  test_report_delivery.py  test_report_persistence.py  test_reports_read_models.py  test_settings_read_endpoint.py  test_telegram_linking.py  test_telegram_webhook.py
(+67 files in other folders)
